added the about/contact page to the header

--- a/public/AboutContact.html
+++ b/public/AboutContact.html
@@ -2,9 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>About/Contact</title>
+
 </head>
 <body>
+
+<h2>About</h2>
+
+<p>
+
+</p>
+
+<h2>Contact Us</h2>
+
+<p>
+
+</p>
 
 </body>
 </html>
